// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FancyInputComponent should render the highlights correctly based on the matched variables in text 1`] = `
<div
  id="root2"
>
  <div
    class="fancy-input-container"
  >
    <input
      class="fancy-input-content fancy-input-element ng-untouched ng-valid ng-dirty"
      placeholder=""
      type="text"
    />
    <div
      class="fancy-input-backdrop"
    >
      <div
        class="fancy-input-content fancy-input-highlights"
      >
        
        
        
        <span>
          some text 
        </span>
        
        
        
        
        
        <app-fancy-input-marker>
          <mark
            class="fancy-input-marker__invalid"
          >
            {{variable1}}
          </mark>
          
        </app-fancy-input-marker>
        
        
        
        <span>
           then 
        </span>
        
        
        
        
        
        <app-fancy-input-marker>
          <mark
            class="fancy-input-marker__invalid"
          >
            {{variable2}}
          </mark>
          
        </app-fancy-input-marker>
        
        
        
        <span>
           is next
        </span>
        
        
      </div>
    </div>
  </div>
</div>
`;

exports[`FancyInputComponent should set component value when input value changes 1`] = `
<div
  id="root1"
>
  <div
    class="fancy-input-container"
  >
    <input
      class="fancy-input-content fancy-input-element ng-untouched ng-valid ng-dirty"
      placeholder=""
      type="text"
    />
    <div
      class="fancy-input-backdrop"
    >
      <div
        class="fancy-input-content fancy-input-highlights"
      >
        
        
        
        <span>
          some text
        </span>
        
        
      </div>
    </div>
  </div>
</div>
`;
